--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Bare-Bones Website</title>
+    <title>Simple API on GitHub Pages</title>
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
-    <p>This is a super basic website.</p>
+    <h1>API Endpoint Example</h1>
+    <button id="fetchDataButton">Fetch Data</button>
+    <pre id="response"></pre>
+
+    <script>
+        document.getElementById('fetchDataButton').addEventListener('click', function() {
+            fetch('data.json')
+                .then(response => response.json())
+                .then(data => {
+                    document.getElementById('response').textContent = JSON.stringify(data, null, 2);
+                })
+                .catch(error => console.error('Error fetching data:', error));
+        });
+    </script>
 </body>
 </html>
