--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>API Endpoint Example</h1>
-    <button id="fetchDataButton">Fetch Data</button>
+    <button id="fetchDataButton">Fetich Data</button>
     <pre id="response"></pre>
 
     <script>
